src/test/deca/context/invalid/created/binary_exp/op_bool/and_int_A.deca
// Description :
//    test and entre un int et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche int. Type droit A Type attendu: ‘boolean’
class A{}
{
int a;
A b;
boolean c = a && b;
}
